force-app/main/default/objects/Skill_Session__c/Skill_Session__c.object-meta.xml
<CustomObject>
    <label>Skill Session</label>
    <nameField>
        <label>Skill Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skill Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>