force-app/main/default/objects/Skill_Session__c/fields/Seats_Open__c.field-meta.xml
<CustomField>
    <fullName>Seats_Open__c</fullName>
    <formula>MAX(0, Total_Seats__c - Seats_Taken__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seats Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>