force-app/main/default/objects/Skill_Session__c/fields/Seats_Taken__c.field-meta.xml
<CustomField>
    <fullName>Seats_Taken__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Seats Taken</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>