force-app/main/default/objects/Skill_Session__c/fields/Session_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_End_Time__c</fullName>
    <label>Session End Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>