force-app/main/default/objects/Skill_Session__c/fields/Skill_Course__c.field-meta.xml
<CustomField>
    <fullName>Skill_Course__c</fullName>
    <label>Skill Course</label>
    <referenceTo>Skill_Course__c</referenceTo>
    <relationshipLabel>Skill Sessions</relationshipLabel>
    <relationshipName>Skill_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>