force-app/main/default/objects/Skill_Session__c/fields/Total_Hours_for_Session__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_for_Session__c</fullName>
    <formula>Training_Hours__c * Seats_Taken__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours for Session</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>