force-app/main/default/objects/Skill_Session__c/fields/Training_Hours__c.field-meta.xml
<CustomField>
    <fullName>Training_Hours__c</fullName>
    <formula>(Session_End_Time__c - Session_Start_Time__c) * 24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>