force-app/main/default/objects/Skill_Session__c/validationRules/Must_have_more_seats_available_than_take.validationRule-meta.xml
<ValidationRule>
    <fullName>Must_have_more_seats_available_than_take</fullName>
    <active>true</active>
    <errorConditionFormula>Total_Seats__c &lt; Seats_Taken__c</errorConditionFormula>
    <errorMessage>Total seats cannot be lower than seats already taken.</errorMessage>
</ValidationRule>