force-app/main/default/objects/Skill_Session__c/validationRules/Skill_session_must_start_before_it_ends.validationRule-meta.xml
<ValidationRule>
    <fullName>Skill_session_must_start_before_it_ends</fullName>
    <active>true</active>
    <errorConditionFormula>Session_End_Time__c &lt;=  Session_Start_Time__c</errorConditionFormula>
    <errorMessage>Session end date should be greater than starting date</errorMessage>
</ValidationRule>